Fix issue with links nesting
Due to most recent update (adding "/" to links), urls are now stacking, leading to 404s that cannot even load the basic CSS for the 404 page.

--- a/404.html
+++ b/404.html
@@ -21,9 +21,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
-    <a href="memberships/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
-    <a href="amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
-    <a href="contact/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="/memberships/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
+    <a href="/amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
+    <a href="/contact/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -34,8 +34,8 @@
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships/">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities/">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact/">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities/">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact/">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-contact-cassel-hills-pool" href="#contact-cassel-hills-pool" onclick="set_focus_contact_cassel_hills_pool()">Status 404</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-contact-management" href="#contact-management" onclick="set_focus_contact_management()">Other Pages</a>
@@ -51,7 +51,7 @@
 		<div class="w3-col m12 l9 main-content">
 			<div class="w3-padding-32 w3-container" id="contact-cassel-hills-pool">
 				<h1 class="w3-text-theme">Oops! This page couldn't be found!</h1>
-				<p>The web server returned a status of 404. <br>It appears that this page does not exist or has been relocated to another URL.<br><br>If you think that something belongs here, please <a href="contact/">reach out to us via the methods on our contact page</a>.</p>
+				<p>The web server returned a status of 404. <br>It appears that this page does not exist or has been relocated to another URL.<br><br>If you think that something belongs here, please <a href="/contact/">reach out to us via the methods on our contact page</a>.</p>
 			</div>
 			<div class="w3-padding-16 w3-container" id="contact-management">
 				<h1 class="w3-text-theme">Other Pages</h1>
@@ -69,15 +69,15 @@
 							<h3>Admission & Memberships</h3>
 						</header>
 						<div class="w3-container w3-light-gray">
-							<p>Learn about pricing and hours.<br><br><a href="memberships/" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
+							<p>Learn about pricing and hours.<br><br><a href="/memberships/" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
 						</div>
 					</div></a>
-					<a href="amenities/"><div class="w3-third w3-padding">
+					<a href="/amenities/"><div class="w3-third w3-padding">
 						<header class="w3-container w3-theme-dark w3-hover-theme">
 							<h3>Cassel Hills Pool Amenities</h3>
 						</header>
 						<div class="w3-container w3-light-gray">
-							<p>See what the pool has to offer.<br><br><a href="amenities/" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
+							<p>See what the pool has to offer.<br><br><a href="/amenities/" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
 						</div>
 					</div></a>
 				</div>
