--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-theme-dark w3-hover-white">Home</a>
-    <a href="memberships/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
-    <a href="amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
-    <a href="contact/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="/memberships/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
+    <a href="/amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
+    <a href="/contact/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -34,8 +34,8 @@
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships/">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities/">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact/">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities/">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact/">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-welcome" href="#welcome" onclick="set_focus_welcome()">Welcome</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-focus-vandalia" href="#focus-vandalia" onclick="set_focus_focus_vandalia()">Focus Vandalia</a>
@@ -52,7 +52,7 @@
 		<div class="w3-padding-64 w3-container" id="welcome">
 			<img src="images/CHP_cropped.png" alt="Cassel Hills Pool" class="w3-image">
 			<h1 class="w3-text-theme">Welcome to Cassel Hills Pool!</h1>
-			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quite Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="amenities/">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="memberships/">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="memberships/">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
+			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quite Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="/amenities/">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="memberships/">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="memberships/">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
 		</div>
 		
 		<div class="w3-padding-32 w3-container" id="focus-vandalia">
