Fix link nesting error for small and medium pages.

--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships/">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/memberships">Admission & Memberships</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities">Amenities</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
@@ -64,7 +64,7 @@
 							<p>Go to the homepage for this site.<br><br><a href="/" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
 						</div>
 					</div></a>
-					<a href="memberships/"><div class="w3-third w3-padding">
+					<a href="/memberships"><div class="w3-third w3-padding">
 						<header class="w3-container w3-theme-dark w3-hover-theme">
 							<h3>Admission & Memberships</h3>
 						</header>
