--- a/amenities.html
+++ b/amenities.html
@@ -31,7 +31,7 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships/">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/memberships">Admission & Memberships</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="/amenities">Amenities</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
@@ -78,7 +78,7 @@
 			</div>
 			<div class="w3-padding-16 w3-container" id="special-events">
 				<h1 class="w3-text-theme">Special Events</h1>
-				<p>The City of Vandalia and Cassel Hills Pool host monthly events throughout our regular season (June through August). These events are free to <a href="memberships#membership-categories">Members of Cassel Hills Pool</a>, Vandalia Residents, and families of the Vandalia-Butler School District. </p>
+				<p>The City of Vandalia and Cassel Hills Pool host monthly events throughout our regular season (June through August). These events are free to <a href="/memberships#membership-categories">Members of Cassel Hills Pool</a>, Vandalia Residents, and families of the Vandalia-Butler School District. </p>
 				<table class="w3-table-all">
 					<thead>
 						<tr class="w3-theme-dark">
@@ -126,7 +126,7 @@
 						<td>75 Guests</td>
 					</tr>
 					<tr class="w3-hover-theme">
-						<td><a href="memberships#membership-categories" class="hover-link-dark">Cassel Hills Pool Member</a></td>
+						<td><a href="/memberships#membership-categories" class="hover-link-dark">Cassel Hills Pool Member</a></td>
 						<td>$250.00</td>
 						<td>100 Guests</td>
 					</tr>
