--- a/memberships.html
+++ b/memberships.html
@@ -31,7 +31,7 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships/">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="/memberships">Admission & Memberships</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities">Amenities</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
@@ -143,9 +143,9 @@
 				<ul>
 					<li>Early access before daily admission to non-residents on Tuesday, Thursday, Friday, and Saturday</li>
 					<li>Access on members and residents only days</li>
-					<lii>Access to <a href="amenities#special-events">monthly special events</a> hosted at Cassel Hills Pool</lii>
+					<lii>Access to <a href="/amenities#special-events">monthly special events</a> hosted at Cassel Hills Pool</lii>
 					<li>Up to three guests per member, admitted at the $6 Vandalia Resident daily admission rate.</li>
-					<li>Reduced <a href="amenities#rentals">rental price</a>, as well as higher number of permitted rental attendees.</li>
+					<li>Reduced <a href="/amenities#rentals">rental price</a>, as well as higher number of permitted rental attendees.</li>
 				</ul>
 			</div>
 			<div class="w3-padding-16 w3-container" id="membership-categories">
