Update for basic SEO.
Change extra <h1> tags to <h2> tags
Create additional meta tags

--- a/404.html
+++ b/404.html
@@ -4,6 +4,9 @@
 	<title>Cassel Hills Pool - Contact</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="robots" content="none">
+	<meta name="author" content="AaronTook (aarontook.github.io)">
+	<meta name="description" content="A Error: 404 page for Cassel Hills Swimming Pool in Vandalia Ohio with a error message and page listing.">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -50,11 +53,11 @@
 	<div class="w3-row">
 		<div class="w3-col m12 l9 main-content">
 			<div class="w3-padding-32 w3-container" id="contact-cassel-hills-pool">
-				<h1 class="w3-text-theme">Oops! This page couldn't be found!</h1>
+				<h1 class="w3-text-theme">This page couldn't be found!</h1>
 				<p>The web server returned a status of 404. <br>It appears that this page does not exist or has been relocated to another URL.<br><br>If you think that something belongs here, please <a href="/contact">reach out to us via the methods on our contact page</a>.</p>
 			</div>
 			<div class="w3-padding-16 w3-container" id="contact-management">
-				<h1 class="w3-text-theme">Other Pages</h1>
+				<h2 class="w3-text-theme sectionHeader">Other Pages</h1>
 				<div class="w3-row">
 					<a href="/"><div class="w3-third w3-padding">
 						<header class="w3-container w3-theme-dark w3-hover-theme">
