--- a/amenities.html
+++ b/amenities.html
@@ -4,6 +4,8 @@
 	<title>Cassel Hills Pool - Amenities</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="AaronTook (aarontook.github.io)">
+	<meta name="description" content="Discover the various amenities of Cassel Hills Swimming Pool in Vandalia Ohio. Learn about city events, private rentals, and the Cassel Hills Piranhas Swim Team.">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -72,12 +74,12 @@
 				</ul>
 			</div>
 			<div class="w3-padding-16 w3-container" id="concessions">
-				<h1 class="w3-text-theme">Kona Ice Concessions Stand</h1>
+				<h2 class="w3-text-theme sectionHeader">Kona Ice Concessions Stand</h1>
 				<p>Cassel Hills Pool's concessions stand will once again be operated by Kona Ice!<br><br>The concessions stand will open at 12 P.M., and closes at 6 P.M. every day, weather permitting.<br>In additon to their namesake shaved ice, Kona Ice also serves snacks including soft pretzels, nachos, assorted candies, and ice cream!</p>
 				<i>Cash and card are the only accepted payment options at the concessions stand.<br>We apologize for any inconvenience.</i>
 			</div>
 			<div class="w3-padding-16 w3-container" id="special-events">
-				<h1 class="w3-text-theme">Special Events</h1>
+				<h2 class="w3-text-theme sectionHeader">Special Events</h1>
 				<p>The City of Vandalia and Cassel Hills Pool host monthly events throughout our regular season (June through August). These events are free to <a href="/memberships#membership-categories">Members of Cassel Hills Pool</a>, Vandalia Residents, and families of the Vandalia-Butler School District. </p>
 				<table class="w3-table-all">
 					<thead>
@@ -105,7 +107,7 @@
 				</table>
 			</div>
 			<div class="w3-padding-16 w3-container" id="rentals">
-				<h1 class="w3-text-theme">Pool Rentals</h1>
+				<h2 class="w3-text-theme sectionHeader">Pool Rentals</h1>
 				<p>Do you want to rent Cassel Hills Pool?<br><br>Cassel Hills Pool offers pool rentals on Friday, Saturday, and Sunday nights from 7:00 P.M. - 9:00 P.M. during the regular season (June through August).</p>
 				<table class="w3-table-all">
 					<thead>
@@ -134,7 +136,7 @@
 				<p><br>Reach out to Vandalia's Party Coordinator, Jennifer Webb, <a href="mailto:jwebb@vandaliaohio.org">via email at jwebb@vandaliaohio.org</a> or <a href="https://vandaliaohio.org/FormCenter/Parks-and-Recreation-9/Cassel-Hills-Pool-Private-Party-Rental-R-94" target="_blank">book your rental online today! <sup><i class="fa fa-external-link"></i></sup></a></p>
 			</div>
 			<div class="w3-padding-16 w3-container" id="piranhas">
-				<h1 class="w3-text-theme">Cassel Hills Piranhas Swim Team</h1>
+				<h2 class="w3-text-theme sectionHeader">Cassel Hills Piranhas Swim Team</h1>
 				<p>Offering swim instruction for those ages 4-5 as well as competitive swim practices and competion for children up to age 18, the Cassel Hills Piranhas are a great way to experience competitive swim during the summer months! Meeting before opening at Cassel Hills Pool, the Piranhas practice for competition with other teams in the Southern Ohio Swim League, participating in six two-team meets and a seven-team Swim Championship Meet throughout the summer. Cassel Hills Pool closes at 4:30 P.M. for the three home meets that the Piranhas host on June 15<sup>th</sup>, 22<sup>nd</sup>, and 29<sup>th</sup>.</p>
 				
 				<p>You can learn more about the Piranhas on <a href="https://www.casselhillspiranhas.com/" target="_blank">their website <sup><i class="fa fa-external-link"></i></sup></a> or <a href="https://www.facebook.com/203550299668924" target="_blank"> the Piranhas' Facebook page <sup><i class="fa fa-external-link"></i></sup>.</a><br>To reach out to the Piranhas Swim Team, <a href="sendto:casselhillspiranhas@gmail.com">send an email to casselhillspiranhas@gmail.com</a>.</p>
