--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 	<title>Cassel Hills Pool - Contact</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="AaronTook (aarontook.github.io)">
+	<meta name="description" content="Visit or contact Cassel Hills Swimming Pool, find directions and contact information, or reach out to Cassel Hills Pool, the City of Vandalia, and SwimSafe Pool Management.">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -56,7 +58,7 @@
 				<iframe class="w3-hide-large w3-hide-medium" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12245.474842051048!2d-84.18087960972261!3d39.888376461969514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7c25098a8347%3A0x29b526f5242b3242!2sCassel%20Hills%20Swimming%20Pool!5e0!3m2!1sen!2sus!4v1692996227726!5m2!1sen!2sus"  height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" SameSite="False"></iframe>
 			</div>
 			<div class="w3-padding-16 w3-container" id="contact-management">
-				<h1 class="w3-text-theme">Contact Management</h1>
+				<h2 class="w3-text-theme sectionHeader">Contact Management</h1>
 				<p>The City of Vandalia entered into an Aquatics Staffing Services Agreement with <a href="https://www.swimsafepool.com/" target="_blank">SwimSafe Pool Management, Inc.</a> in 2020. As part of the Agreement, SwimSafe provides comprehensive pool management, including staffing and supervision of Cassel Hills Pool and the Vandalia Recreation Center Pool. The City’s expectations are that SwimSafe provides a safe environment that affords visitors the opportunity to enjoy a positive swimming experience. If you recognize anything that our City’s Parks & Recreation Department should be aware of, we encourage you to contact our Recreation Superintendent, Jeff Kreill.<br><br>The City is committed to providing safe and meaningful recreational opportunities to our residents and visitors and your feedback is vital to our mission.</p>
 				<div class="w3-row">
 					<div class="w3-half w3-padding">
