--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Cassel Hills Pool - Home</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="AaronTook (aarontook.github.io)">
+	<meta name="description" content="The homepage for Cassel Hills Swimming Pool in Vandalia Ohio. Learn more about what the pool has to offer and find up-to-date information about Cassel Hills Pool.">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -52,11 +54,11 @@
 		<div class="w3-padding-64 w3-container" id="welcome">
 			<img src="images/CHP_cropped.png" alt="Cassel Hills Pool" class="w3-image">
 			<h1 class="w3-text-theme">Welcome to Cassel Hills Pool!</h1>
-			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quite Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="/amenities">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="/memberships">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="/memberships">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
+			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quiet Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="/amenities">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="/memberships">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="/memberships">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
 		</div>
 		
 		<div class="w3-padding-32 w3-container" id="focus-vandalia">
-			<h1 class="w3-text-theme">Focus Vandalia - Cassel Hills Pool</h1>
+			<h2 class="w3-text-theme sectionHeader">Focus Vandalia - Cassel Hills Pool</h1>
 			<iframe class="w3-hide-small" width="100%" height="520px" src="https://www.youtube.com/embed/rPHVQcv8sdA" title="Focus Vandalia - Cassel Hills Pool" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			<iframe class="w3-hide-medium w3-hide-large" width="100%" height="350px" src="https://www.youtube.com/embed/rPHVQcv8sdA" title="Focus Vandalia - Cassel Hills Pool" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</div>
