--- a/memberships.html
+++ b/memberships.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Cassel Hills Pool - Memberships</title>
+	<title>Cassel Hills Pool - Admission & Memberships</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="AaronTook (aarontook.github.io)">
+	<meta name="description" content="Cassel Hills Swimming Pool operating hours of and price of daily admission. Learn more about membership categories, pricing, and benefits at Cassel Hills Pool in Vandalia Ohio.">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -49,7 +51,7 @@
 	<div class="w3-row ">
 		<div class="w3-col m12 l9">
 			<div class="w3-padding-32 w3-container" id="daily-admission">
-				<h1 class="w3-text-theme">Cassel Hills Pool Daily Admission</h1>
+				<h1 class="w3-text-theme">Cassel Hills Pool Hours and Admission</h1>
 				<h4>Cassel Hills Pool daily admission pricing and hours are as follows:</h4>
 				<div class="w3-row">
 					<div class="w3-half w3-center">
@@ -138,7 +140,7 @@
 				</ul>
 			</div>
 			<div class="w3-padding-16 w3-container" id="membership-perks">
-				<h1 class="w3-text-theme">Cassel Hills Pool Membership Perks</h1>
+				<h2 class="w3-text-theme sectionHeader">Cassel Hills Pool Membership Perks</h1>
 				<p>Benefits of being a Cassel Hills Pool Member include:</p>
 				<ul>
 					<li>Early access before daily admission to non-residents on Tuesday, Thursday, Friday, and Saturday</li>
@@ -149,7 +151,7 @@
 				</ul>
 			</div>
 			<div class="w3-padding-16 w3-container" id="membership-categories">
-				<h1 class="w3-text-theme">Cassel Hills Pool Membership Categories</h1>
+				<h2 class="w3-text-theme sectionHeader">Cassel Hills Pool Membership Categories</h1>
 				<p>Cassel Hills Pool Memberships may only be purchased at the front desk of the Vandalia Recreation Center.</p>
 				<table class="w3-table-all">
 					<thead>
